--- a/package.json
+++ b/package.json
@@ -109,10 +109,10 @@
     "@react-native-firebase/perf": "^12.3.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/material-top-tabs": "^6.6.3",
-    "@react-navigation/native": "6.1.12",
-    "@react-navigation/native-stack": "^6.9.26",
-    "@react-navigation/stack": "6.3.29",
+    "@react-navigation/material-top-tabs": "7.2.13",
+    "@react-navigation/native": "7.1.10",
+    "@react-navigation/native-stack": "7.3.14",
+    "@react-navigation/stack": "7.3.3",
     "@react-ng/bounds-observer": "^0.2.1",
     "@rnmapbox/maps": "10.1.33",
     "@shopify/flash-list": "1.7.6",
@@ -185,7 +185,7 @@
     "react-native-release-profiler": "^0.2.1",
     "react-native-render-html": "6.3.1",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "3.37.0",
+    "react-native-screens": "4.10.0",
     "react-native-share": "11.0.2",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "15.9.0",
