Apply suggestions from code review
Indentation and multi-line breaks.

Co-authored-by: Rafe Colton <1058475+rafecolton@users.noreply.github.com>

--- a/.github/workflows/lint-changed.yml
+++ b/.github/workflows/lint-changed.yml
@@ -20,8 +20,7 @@ jobs:
       - name: Fetch merge base SHA from API
         id: merge_base
         run: |
-          MERGE_BASE_SHA="$(gh api "repos/$REPO/compare/${PR_BASE_SHA}...${PR_HEAD_SHA}" \
-          | jq -r '.merge_base_commit.sha')"
+          MERGE_BASE_SHA="$(gh api "repos/$REPO/compare/${PR_BASE_SHA}...${PR_HEAD_SHA}" | jq -r '.merge_base_commit.sha')"
           echo "MERGE_BASE_SHA=$MERGE_BASE_SHA" >> "$GITHUB_OUTPUT"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -32,8 +31,7 @@ jobs:
       - name: Count commits between merge base and HEAD
         id: count
         run: |
-          COMMIT_COUNT="$(gh api "repos/$REPO/compare/${BASE}...main" \
-            | jq -r '.total_commits')"
+          COMMIT_COUNT="$(gh api "repos/$REPO/compare/${BASE}...main" | jq -r '.total_commits')"
           echo "count=$COMMIT_COUNT" >> "$GITHUB_OUTPUT"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
